# Bohares

./: CMakeLists.txt  README.md
source/: core.h  error.c  error.h  main.c  model.c  model.h  pch.h  state.c  state.h  types.c  types.h
source/interpreter/: interpreter.c  interpreter.h
source/lexer/: lexer.c  lexer.h
source/parser/: parser.c  parser.h
source/state/: boh_state.c  state.c  state.h
source/utils/ds/: dyn_array.c  dyn_array.h  hash.c  hash.h  strid.c  strid.h  string.c  string.h  string_view.c  string_view.h
source/utils/file/: file.c  file.h
source/utils/memory/: arena_allocator.c  arena_allocator.h  memory_arena.c  memory_arena.h  stack_allocator.c  stack_allocator.h
source/utils/message/: message.c  message.h
source/utils/print/: print.c  print.h
test/: test.boh
